--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,8 @@
           </li>
           <li><a (click)="this.routerLinkChunkProcessing('/labnotebook')"><span>Notebook</span></a>
           </li>
+          <li><a (click)="this.routerLinkChunkProcessing('/biology/hplc')"><span>HPLC Explorer</span></a>
+          </li>
           <!-- <li><a href='http://2018.igem.org/Team:GO_Paris-Saclay/protocols'><span>Protocols</span></a>
           </li> -->
         </ul>
