--- a/src/gops_theme.css
+++ b/src/gops_theme.css
@@ -1915,6 +1915,10 @@ a {
   width: 116%;
   margin: 1.2em -8%; }
 
+.normalmargin {
+  width: 100%;
+  margin: 1.2em 0%; }
+
 .ultralargefig {
   width: 125%;
   margin: 1.2em -12.5%; }
