--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -309,6 +309,11 @@ a {
   margin: 1.2em -8%;
 }
 
+.normalmargin {
+  width: 100%;
+  margin: 1.2em 0%;
+}
+
 .ultralargefig {
   width: 125%;
   margin: 1.2em -12.5%;
