--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,8 @@
           </li>
           <li><a (click)="this.routerLinkChunkProcessing('/software')"><span>Software</span></a>
           </li>
+          <li><a (click)="this.openWikiSourceBottomSheet()"><span>Wiki source code</span></a>
+          </li>
         </ul>
       </li>
       <li><a (click)="this.routerLinkChunkProcessing('/human-practices')"><span>Human practice</span></a></li>
