--- a/src/app/attribution/attribution.component.html
+++ b/src/app/attribution/attribution.component.html
@@ -1,4 +1,4 @@
-<div class="bannercontainer">
+<div class="bannercontainer" >
   <img src="http://2018.igem.org/wiki/images/0/03/T--GO_Paris-Saclay--fond_groupe.png"
        class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
@@ -50,7 +50,7 @@
     <p>
       Stéphanie is a professor at Paris-Sud University and researcher at Institute for Integrative Biology of the Cell
       (I2BC). She was a lab supervisor. Her background and knowledge in microbiology was so helpful and we are glad that
-      she is part of the team. She was a core of our project design. we could not reach to this level of advancement in
+      she is part of the team. She was a core of our project design. We could not reach to this level of advancement in
       our project without her.
     </p>
   </div>
@@ -108,10 +108,9 @@
     <h2>Mahnaz Sabeti-Azad</h2>
 
     <p>
-      PhD student at Paris-Sud University. She was the bravest to be the first lab supervisor of this year team.
-      Explaining every aspect of lab life and lab functionality to our team was not simple. We started the lab
-      experience with her and this is why we have a working bacteria now! We would like to thank her for her patience
-      and guidance during the first month. </p>
+      PhD student at Paris-Sud University. She was our lab supervisor for a whole month during summer wet lab experiment.
+      She was a huge help in the lab. Creating priorities, dividing the tasks, guiding us through the experimentation,
+      it was a fun time to be there in the lab with Mahnaz. </p>
   </div>
   <p class="spacemaker"></p>
 
