--- a/src/app/collaborations/collaborations.component.html
+++ b/src/app/collaborations/collaborations.component.html
@@ -14,7 +14,7 @@
   </p>
   <h1>Sorbonne University team</h1>
   <img class="pmeetup" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--sorbonne_collab.jpg">
-  <p>Sorbonne University/IGEM GO Paris_Saclay is probably the best example of what a real collaboration is. Because our
+  <p><a href="http://2018.igem.org/Team:Sorbonne_U_Paris/Collaborations">iGEM Sorbonne University</a>/IGEM GO Paris_Saclay is probably the best example of what a real collaboration is. Because our
     team lacked programmers and designers, they proposed to help us with the coding part of IGEM (which really helped us
     in
     creating our wiki), and with the sketching process of our new logo.</p>
@@ -27,7 +27,7 @@
   <h1>Grenoble team</h1>
   <img src="http://2018.igem.org/wiki/images/b/ba/T--GO_Paris-Saclay--grenoble_collab.jpg" class="pmeetup">
   <p>
-    In collaboration with the iGEM Grenoble team we created the: “Take a famous painting and throw some biology in it
+    In collaboration with the <a href="http://2018.igem.org/Team:Grenoble-Alpes/Collaborations">IGEM Grenoble Alpes </a> team we created the: “Take a famous painting and throw some biology in it
     challenge”. Pictures were posted on social media, the one with the most “likes” wins the competition. A very fun
     challenge indeed, a nice break from the lab during the summer.
   </p>
@@ -36,7 +36,7 @@
   <h1>Dusseldorf team</h1>
   <img src="http://2018.igem.org/wiki/images/0/00/T--GO_Paris-Saclay--collab_postcard.png" class="pmeetup">
   <p>
-    We collaborated with Dusseldorf iGEM team and we participating team designs a postcard which shows an image related
+    We collaborated with <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM steam</a> and we participating team designs a postcard which shows an image related
     to synthetic biology (or your topic) on the front and a small informational text on the back. Afterwards each team’s
     postcards are exchanged with other iGEM-teams so that every team can collect postcards from all over the world. The
     received postcards can then be shared with people in the neighbourhood, during public events and so on. We chose to
