--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 <div id="alter">Alter ecosystemes</div>
 
 <a id="double_fleche2" href="#ancre3"><img id="double_fleche2" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
-
+<!--
 <img id="bloc4" src="http://2018.igem.org/wiki/images/6/6d/T--GO_Paris-Saclay--cartelegende.png
 " alt="bloc4">
 <div id="ancre3">o</div>
@@ -55,9 +55,20 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 <div id="text2carte">Pharmaceuticals pollution is underated.</div>
 
 <div id="text3">Some paper, says that if no mitigation action is taken, this environmental threat will increase up to <strong>65%</strong> by 2050 for some drugs.</div>
+-->
 
+  <div class="oursolution" id="ancre3">
+    <div class="oursoltext">Our&nbsp;solution&nbsp;:&nbsp;Methotrexit</div>
+  </div>
 
-  <img style="position: absolute; top: 275vh" src="http://2018.igem.org/wiki/images/5/5b/T--GO_Paris-Saclay--footerespace.png" class="superposedbanner1">
+  <div class="smallpresproj">
+
+  </div>
+
+  <img src="http://2018.igem.org/wiki/images/1/1e/T--GO_Paris-Saclay--frontpage_descr.png" class="wideimg schemashort">
+
+  <img src="http://2018.igem.org/wiki/images/5/5b/T--GO_Paris-Saclay--footerespace.png" class="footerposition">
+
 
 
 </div>
