--- a/src/app/safety/safety.component.html
+++ b/src/app/safety/safety.component.html
@@ -1,7 +1,11 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Safety</h1>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/c/c8/T--GO_Paris-Saclay--stagedlab_underbanner.png"
+       class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
+       class="bannerimg superposedbanner2">
+  <div class="headlinetext">Safety</div>
+</div>
 
   <mat-card class="dashboard-card" >
 
   </mat-card>
-</div>
