--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -1,7 +1,7 @@
 <div class="bannercontainer">
   <img src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--team_underbanner.png" class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
-  <div class="headlinetext">Our Team</div>
+  <div class="headlinetext">Our&nbsp;Team</div>
 </div>
 
 
