--- a/src/gops_theme.css
+++ b/src/gops_theme.css
@@ -1881,7 +1881,11 @@ ng-list-item .mat-divider {
   border: 0px; }
 
 h1 {
-  font-size: 20pt; }
+  font-size: 28pt;
+  width: 105%;
+  margin-bottom: 0.5em;
+  margin-top: 1.3em;
+  font-weight: bolder; }
 
 h1, h2, h3 {
   font-weight: bolder; }
