--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,18 +14,17 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 
 
 <div class="discover">
- <p> <a href="#ancre">Discover our project</a></p>
+ <p> <a href="#ancre" pageScroll>Discover our project</a></p>
 </div>
 
 <img id="bloc2" src="http://2018.igem.org/wiki/images/5/56/T--GO_Paris-Saclay--BON2909bloc2.png" alt="bloc2">
 
 <div id="textbloc2">
   Thanks to medicinal
-  advances, each year, drug consumption increases  to treat the population.
-  BUT
-  Downside drugs aren’t totally metabolized and accumulate gradually in wastewater
+  advances, each year drug consumption increases to meet the needs of the population.<br><br>
+  However drugs are not totally metabolized and by-products accumulate in wastewater.
 </div>
-<a id="double_fleche" href="#ancre2"><img id="double_fleche" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
+<a id="double_fleche" href="#ancre2" pageScroll><img id="double_fleche" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
 
 <div id="ancre">o</div>
 
@@ -39,11 +38,11 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 
 <div id="antibio">Antibiotic resistance</div>
 
-<div id="vitro">In vitro human cell death</div>
+<div id="vitro">Disrupting effects on cells</div>
 
-<div id="alter">Alter ecosystemes</div>
+<div id="alter">Altered ecosystems</div>
 
-<a id="double_fleche2" href="#ancre3"><img id="double_fleche2" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
+<a id="double_fleche2" href="#ancre3" pageScroll><img id="double_fleche2" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
 <!--
 <img id="bloc4" src="http://2018.igem.org/wiki/images/6/6d/T--GO_Paris-Saclay--cartelegende.png
 " alt="bloc4">
@@ -62,13 +61,20 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
   </div>
 
   <div class="smallpresproj">
-
+      We designed a novel biotransformation pathway using a heterologously expressed carboxypeptidase in <i>Escherichia coli</i>.
+     In only 5 hours, <b>MethotrExit</b> drastically removes methotrexate (MTX), a broadly used anticancer drug from
+      the media.<br><br>
+    However, degrading drugs can prove toxic to the bacteria itself. To
+      overcome this issue, we bring heterogeneity in the form of varying pathway expression, as that ensures the survival of a
+      self-renewable, reserve subpopulation: a division of labor between ‘cleaning’ and ‘stem’
+      bacterial cells is achieved.
   </div>
 
   <img src="http://2018.igem.org/wiki/images/1/1e/T--GO_Paris-Saclay--frontpage_descr.png" class="wideimg schemashort">
 
-  <img src="http://2018.igem.org/wiki/images/5/5b/T--GO_Paris-Saclay--footerespace.png" class="footerposition">
-
+  <div class="comeseemore">
+    <div class="seemoretext"><a style="color:white;" (click)="this.router.navigate(['project'], { fragment: 'top'})"> &gt;&nbsp;Learn&nbsp;more&nbsp;about&nbsp;MethotrExit&nbsp;!&nbsp;&lt; </a></div>
+  </div>
 
 
 </div>
