--- a/src/app/demonstrate/demonstrate.component.html
+++ b/src/app/demonstrate/demonstrate.component.html
@@ -17,7 +17,7 @@
   </p>
   <p>
     After choosing appropriate chassis strains, we designed synthetic cassettes encoding a new biotransformation pathway
-    using a heterologous carboxypeptidase in <i>Escherichia coli</i>. In only 5 hours, <b>MethotrExit</b> drastically removes MTX from
+    using a heterologously expressed carboxypeptidase in <i>Escherichia coli</i>. In only 5 hours, <b>MethotrExit</b> drastically removes MTX from
     the media. However, the degradation of anticancer drugs and the biotransformation pathway itself can be toxic. To
     overcome these issues, Biobricks bringing heterogeneity in enzyme expression were built to ensure the survival of a
     subpopulation. Modeling of this system highlights the interest of a division of labor between ‘cleaning’ and ‘stem’
